--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Zip Folder
-      run: zip -r NUEL.zip .
+      run: zip -r NUEL.zip . -x ".git/*" ".github/*"
     - name: Release to Github
       run: echo "Release"
