--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,6 +11,7 @@ jobs:
     - name: Zip Folder
       run: zip -r release/NUEL.zip . -x ".git/*" ".github/*" "release/*"
     - name: Release to Github
-      run: git add *
-      run: git commit -m "Created ZIP file"
-      run: git push
+      run: |
+      git add *
+      git commit -m "Created ZIP file"
+      git push
