--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,6 +12,8 @@ jobs:
       run: zip -r release/NUEL.zip . -x ".git/*" ".github/*" "release/*"
     - name: Release to Github
       run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add *
         git commit -m "Created ZIP file"
         git push
