--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,4 +16,4 @@ jobs:
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add *
         git commit -m "Created ZIP file"
-        git push
+        git push origin HEAD:master
